fix: stopped home page main section disappearing behind footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ body {
 .home-body {
     background: #013602;
     max-width: 100%;
+    margin-bottom: 57px;
 }
 
 /*HOME - THEME PICS/LINKS*/
